--- a/PluginLoader2Web/Components/_Imports.razor
+++ b/PluginLoader2Web/Components/_Imports.razor
@@ -11,3 +11,6 @@
 @using MudBlazor.Services
 @using PluginLoader2Web
 @using PluginLoader2Web.Components
+@using MudBlazor.ThemeManager
+@using BlazorAnimate
+
