Added account info

--- a/PluginLoader2Web/Components/Layout/MainLayout.razor
+++ b/PluginLoader2Web/Components/Layout/MainLayout.razor
@@ -35,7 +35,7 @@
 
 
                 <MudMenu Label="@context.User.Identity.Name" Variant="Variant.Outlined" EndIcon="@Icons.Material.Filled.KeyboardArrowDown">
-                    <MudMenuItem> Profile </MudMenuItem>
+                    <MudMenuItem Href="Account/Profile"> Profile </MudMenuItem>
                     <MudMenuItem> Settings </MudMenuItem>
                     <MudMenuItem Href="Account/Logout"> Logout </MudMenuItem>
                 </MudMenu>
