--- a/PluginLoader2Web/Components/Pages/Plugins.razor
+++ b/PluginLoader2Web/Components/Pages/Plugins.razor
@@ -2,7 +2,7 @@
 @using PluginLoader2Web.Data.Models;
 
 @page "/SE2/Plugins"
-@inject ApplicationDbContext DbContext
+@inject DatabaseService db
 
 <MudContainer Class="my-16" MaxWidth="MaxWidth.Large">
     <MudGrid Spacing="10">
@@ -22,7 +22,7 @@
         <!-- MudCarousel in another column -->
         <MudItem xs="12" sm="8">
             <MudCarousel Class="mud-width-full" Style="height:200px;" ShowArrows="true" ShowBullets="true" EnableSwipeGesture="true" AutoCycle="true" TData="object">
-                @foreach (var project in _spotlightProjects)
+                @foreach (var project in _pluginProjects.Where(x => x.CommunitySpotlight))
                 {
 
                     <MudCarouselItem Transition="Transition.Slide">
@@ -45,25 +45,23 @@
 
         <MudItem xs="12">
             <MudGrid Justify="Justify.SpaceEvenly">
-                @foreach (var project in DbContext.PluginProjects)
+                @foreach (var project in _pluginProjects)
                 {
-
 
                     <MudCard Class="d-flex flex-column align-center justify-center mud-width-full py-8">
 
-                                <MudCardContent Style="height:150px; overflow:auto;">
-                                    <MudText Typo="Typo.h5" Color="Color.Primary">@project.Name</MudText>
-                                    <MudText Typo="Typo.body2">@project.LongDescription</MudText>
-                                    <MudText Typo="Typo.body2">This photo was taken in a small village in Istra Croatia.</MudText>
-                                </MudCardContent>
-                                <MudCardActions>
-                                    <MudButton Variant="Variant.Text" Color="Color.Primary">Share</MudButton>
-                                    <MudButton Variant="Variant.Text" Color="Color.Primary">Learn More</MudButton>
-                                </MudCardActions>
-                            </MudCard>
-                        
-                    
+                        <MudCardContent Style="height:150px; overflow:auto;">
+                            <MudText Typo="Typo.h5" Color="Color.Primary">@project.Name</MudText>
+                            <MudText Typo="Typo.body2">@project.LongDescription</MudText>
+                            <MudText Typo="Typo.body2">This photo was taken in a small village in Istra Croatia.</MudText>
+                        </MudCardContent>
+                        <MudCardActions>
+                            <MudButton Variant="Variant.Text" Color="Color.Primary">Share</MudButton>
+                            <MudButton Variant="Variant.Text" Color="Color.Primary">Learn More</MudButton>
+                        </MudCardActions>
+                    </MudCard>
                 }
+
             </MudGrid>
         </MudItem>
 
@@ -74,17 +72,15 @@
 
 
 @code {
-    
-    List<PluginProjectItem> _spotlightProjects = new List<PluginProjectItem>();
+
+    List<PluginProjectItem> _pluginProjects = new List<PluginProjectItem>();
 
 
-
-    protected override async Task OnInitializedAsync()
+    protected override Task OnInitializedAsync()
     {
-        _spotlightProjects = DbContext.PluginProjects
-            .Where(p => p.CommunitySpotlight)
-            .ToList();
-        // Initialization logic here
+        using ApplicationDbContext dbContext = db.OpenConnection();
+        _pluginProjects = dbContext.PluginProjects.ToList();
+        return Task.CompletedTask;
     }
 
 }
